--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prueba-tecnica-iaf",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Mauricio-Garcia-A.github.io/Prueba-tecnica-IAF",
+  "homepage": "https://Mauricio-Garcia-A.github.io/Prueba-tecnica-IAF/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
